--- a/Project_LaravelPHP/public/css/admin_main_profile_update.css
+++ b/Project_LaravelPHP/public/css/admin_main_profile_update.css
@@ -31,7 +31,7 @@ body{
 }
 
 .form__Content input[type="text"] {
-    width: 100%;
+    outline: none;width: 92%;
     height: 28px;
     border: none;
     font-size: 17px;
