--- a/Project_LaravelPHP/public/css/mainpage.css
+++ b/Project_LaravelPHP/public/css/mainpage.css
@@ -100,13 +100,13 @@ section img#mountains_front{
     padding: 100px;
     background: #1c0522;
 }
-.sec h3{
-    font-size: 3.5em;
+.sec h2{
+    font-size: 3.0em;
     margin-bottom: 10px;
     color: #fff;
 }
-.sec p{
-    font-size: 1.5em;
+.sec p {
+    font-size: 1.25em;
     color: #fff;
 }
 .container{
@@ -214,51 +214,108 @@ section img#mountains_front{
 .more .icon-link a:not(:last-child) i{
     margin-right: 20px;
 }
-/*.container .card{
-    max-width: 450px;
-    position: relative;
-    height: 180px;
-    background: transparent;
-    margin: 30px 10px;
-    padding: 20px 15px;
+.search-form{
     display: flex;
-    flex-direction: column;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.5);
-    transition: 0.3s ease-in-out;
+    justify-content: center;
+    align-items: center;
+    min-height: 50vh;
+    background: url(https://cdn.pixabay.com/photo/2014/01/22/19/44/flower-field-250016_960_720.jpg);
+    object-fit: center;
 }
-.container .card:hover{
-    height: 300px;
-}
-.container .card .img_box{
+.search{
     position: relative;
-    width: 350px;
-    height: 450px;
-    top: -40px;
-    left: 0px;
-    z-index: 1;
-    box-shadow: 0 5px 20px rgba(0,0,0,0.2);
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    border-radius: 60px;
+    transition: 0.5s;
+    box-shadow: 0 0 0 5px #2573ef; 
+    overflow: hidden; 
 }
-.container .card .img_box img{
-    max-width: 100%;
-    border-radius: 4px;
+.search.active{
+    width: 360px;
 }
-.container .card .descr{
-    position: relative;
-    margin-top: -140px;
-    padding: 10px 15px;
-    text-align: right;
-    color: #111;
-    visibility: hidden;
-    opacity: 0;
-    transition: 0.3s ease-in-out;
+.search .icon{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 60px;
+    height: 60px;
+    background: #fff;
+    border-radius: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1000;
+    cursor: pointer;
 }
-.container .card .descr h4{
-    color: #fff;
+.search .icon::before{
+    content: '';
+    position: absolute;
+    width: 15px;
+    height: 15px;
+    border: 3px solid #287dfc;
+    border-radius: 50%; 
+    transform: translate(-4px,-4px);
 }
 
-.container .card:hover .descr{
-    visibility: visible;
-    opacity: 1;
-    margin-top: -40px;
-    transition-delay: 0.3s;  
-}*/
+.search .icon::after{
+    content: '';
+    position: absolute;
+    width: 3px;
+    height: 12px;
+    background: #287dfc;
+    transform: translate(6px,6px) rotate(315deg);
+}
+
+.search .input{
+    position: relative;
+    width: 300px;
+    height: 60px;
+    left: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.search .input input{
+    position: absolute;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    border: none;
+    outline: none;
+    font-size: 18px;
+    padding: 10px 0;
+}
+.clear{
+    position: absolute;
+    top: 50%;
+    transform: translateY(-50%);
+    width: 15px;
+    height: 15px;
+    right: 15px;
+    background: #fff;
+    cursor: pointer;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.clear::before{
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(45deg);
+}
+
+.clear::after{
+    position: absolute;
+    content: '';
+    width: 1px;
+    height: 15px;
+    background: #999;
+    transform: rotate(315deg);
+}
